syntax = "proto3";

package delivery;
option java_package = "com.example.delivery";
option java_multiple_files = true;


service DeliveryService {
    rpc createDelivery (VanRequest) returns (VanResponse) {};
}


message Van {
    string vanId = 1;
    int32 drivers = 2;
    int32 volume = 3;
    bool delivering  = 4;
    bool fulfilled  = 5;
    string itemId = 6;
}

message VanRequest {
    Van van = 1;
}

message VanResponse {
    Van van = 1;
}
